# openslam_MTK

./: CMakeLists.txt
cpp/: CMakeLists.txt  Doxyfile
cpp/cmake_modules/: FindCXSparse.cmake  FindEigen2.cmake  FindSuiteSparse.cmake
cpp/doc/: slom.sty
cpp/example/: CMakeLists.txt  tools.h
cpp/example/relation/: euler_stable.hpp  relation.cpp  relation_parser.hpp
cpp/example/sba/: slom_sba.cc
cpp/mtk/: build_manifold.hpp  startIdx.hpp
cpp/mtk/src/: mtkmath.hpp
cpp/mtk/types/: S2.hpp  SOn.hpp  pose.hpp  vect.hpp
cpp/slom/: Algorithm.hpp  BuildMeasurement.hpp  CallBack.hpp  CholeskyCovariance.hpp  Covariance.hpp  Estimator.hpp  Optimizer.hpp  Solver.hpp  m_estimate.hpp
cpp/slom/algorithms/: GaussNewton.cpp  GaussNewton.hpp  LevenbergMarquardt.cpp  LevenbergMarquardt.hpp  PowellsDogLeg.cpp  PowellsDogLeg.hpp
cpp/slom/preconditioner/: BlockJacobiPreconditioner.cpp  BlockJacobiPreconditioner.hpp  Preconditioner.hpp  SchurPrecond.hpp  StructuralPreconditioner.hpp
cpp/slom/solvers/: CGNRSolver.cpp  CGNRSolver.hpp  CholeskySolver.hpp  GolubKahanLanczos.cpp  GolubKahanLanczos.hpp  IterativeSolver.hpp  LSMRSolver.cpp  LSMRSolver.hpp  LSMRSolver_simplified.cpp  LSQRSolver.cpp  LSQRSolver.hpp  LSQRSolverMatlab.cpp  LSQRSolverMatlab.hpp  LSQRSolver_simplified.cpp  NonlinearCG.cpp  NonlinearCG.hpp
cpp/slom/src/: Estimator.cpp  JtJcolumn.hpp  MeasurementHolder.hpp  Optimizer.cpp  RVHolder.hpp  Sparse.hpp  SparseFunction.cpp  SparseFunction.hpp  SparseInterface.cpp  SparseInterface.hpp  cs_helper.hpp  indexed_list.hpp  internal.hpp
cpp/slom/tools/: ExportSparse.cpp  ExportSparse.hpp  MakeOptions.hpp
cpp/ukfom/: util.hpp
cpp/ukfom/lapack/: cholesky.hpp
cpp/unit_test/: CMakeLists.txt  IO_test.cc  boost_check_close_vector.hh  mtk_test.cc  random_vector.hh  slom_choleskytest.cc  slom_covariance.cc  slom_dynamic_measurement.cc  test_base.cpp  test_base.hpp  vectview_test.cc
doc/: example.cpp
example/: IFexperiments.sh
example/relation/: README  SO3singular.hpp  relation.cpp  relation_parser.hpp  relation_slameval.cpp
example/sba/: slom_sba.cc
matlab/: README.txt  gn.m  nrlm.m
matlab/+mtk/: Compound.m  OptimizationProblem.m  Rn.m  SE2.m  SE3.m  SO2.m  SO3.m  StackedRV.m  make_compound.m  normalize_innovation.m  scale.m
matlab/+mtk/+util/: arot.m  normalize_angle.m  rot.m  rotate_2d.m
matlab/examples/calibration_common/: camera2Image.m  computeCOGC.m  dh2mat44.m  dh_setangle.m  dh_settranslation.m  draw_axes.m  estimate_homography.m  estimate_initial_extrinsic.m  estimate_initial_intrinsic.m  estimate_initial_left2imu.m  image2SensorRay.m  interpolated.m  intersectRays.m  localmarkerdetector.m  pinhole.m  plot_checkerboard_pattern.m  project_point.m  project_points.m  quat2mat33.m  rInv.m  rPrimeWithDerivative.m  undistort.m
matlab/examples/calibration_justin_codesample/: compute_initial_parameters.m  g_world2g_imu.m  justincalib.m  load_data.m  matlab.mat  project_marker.m
matlab/examples/calibration_kinect/: compute_initial_parameters.m  depth.m  g_world2g_acc.m  ir_pinhole_projection.m  kinectcalib.m  load_kinect_depth.m  matlab.mat  plot_results.m  rgb_pinhole_projection.m
matlab/examples/calibration_mono_codesample/: compute_initial_parameters.m  load_data.m  monocalib.m  plot_results.m
matlab/examples/calibration_mono_fast/: compute_initial_parameters.m  matlab.mat  monocalib.m  pinhole_projection.m  plot_results.m
matlab/examples/calibration_nao/: calculate_image_points.m  compute_initial_parameters.m  matlab.mat  naocalib.m  pinhole_projection.m  plot_results.m  read_images.m  remove_outliers.m  stereo_pinhole_projection.m
matlab/examples/dlr-spatial_cognition/: DATASET.txt  dlr.m  dlr_plot_before_after.m  dlr_test.m  extract_positions_landmarks.m  init_poses.m  landmark_relation.m  landmark_relation_fixed.m  parse_dlr_spatial_cognition.m  plot_graph.m  plot_graph_before_after.m  pose_relation.m  pose_relation_2d_fixed.m  sparse_plot.m
matlab/examples/g2o3D/: DATASET.txt  g2o3D.m  g2o_plots.m  g2o_test.m  init_poses.m  parse_g2o.m  pose_relation_3d_fixed.m  q_to_dcm.m  setuppaths.m
matlab/examples/slam_common/: plot_3d_pose_relations.m  plot_3d_poses.m  pose_relation_2d.m  pose_relation_3d.m  sym_from_U.m
matlab/examples/spa/: DATASET.txt  extract_positions.m  init_poses.m  parse_toro2d.m  plot_graph.m  spa.m  spa_plot_before_after.m  spa_plots.m  spa_test.m
matlab/examples/toro3d/: DATASET.txt  init_poses.m  parse_toro3d.m  plot_sphere_before_after.m  toro3d.m  toro3d_test.m  toro_euler_to_dcm.m
matlab/patches/: immoptibox-marquardt-mtkm-port.diff
mtk/: build_manifold.hpp  mean_and_covar.hpp  startIdx.hpp  tutorial.hh
mtk/src/: SubManifold.hpp  eigen.hpp  mtkmath.hpp  vectview.hpp
mtk/types/: S2.hpp  SOn.hpp  pose.hpp  vect.hpp
slom/: BuildMeasurement.hpp  CholeskyCovariance.hpp  Estimator.hpp  TicToc.hpp
slom/src/: Estimator.cpp  SparseFunction.cpp  SparseFunction.hpp  indexed_list.hpp  internal.hpp
ukfom/: ukf.hpp
unit_test/: boost_check_close_vector.hh  mtk_axioms.hh  mtk_test.cc  random_vector.hh  slom_choleskytest.cc
